test/files/neg/t5692b.check
Test_2.scala:2: error: type parameters not specified
  def x = Macros.foo
                 ^
one error found
